<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/connectionName"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context=".HitoricalDetailFragment" />

    <TextView
        android:id="@+id/historical_detail"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:textIsSelectable="true"
        tools:context=".HitoricalDetailFragment" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_all_credentials_button"
        android:text="@string/get_all_credentials"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/send_message"
        android:text="@string/send_message"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/request_proof"
        android:text="@string/request_proof"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_connection"
        android:text="@string/delete_connection"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>
